# BAUMidtermProject

./: .gitignore  DVDEngine.sln  README.md
CSVParser/: ApplicationManager.cpp  BaseDataModel.cpp  CMakeLists.txt  Date.cpp  FileManager.cpp  MenuItem.cpp  Movie.cpp  Utility.cpp  entryPoint.cpp
CSVParser/Headers/: DataCollector.h  FileDataAdapter.h  Global.h  TwoDigitDatePart.h  Utility.h  resource.h
DVDEngine/: ApplicationManager.cpp  ApplicationManager.h  BaseDataModel.cpp  BaseDataModel.h  CMakeLists.txt  DVDEngine.vcxproj  DVDEngine.vcxproj.filters  DataCollector.cpp  DataCollector.h  Date.cpp  Date.h  FileDataAdapter.cpp  FileDataAdapter.h  FileManager.cpp  FileManager.h  FourDigitDatePart.h  Global.h  MenuItem.cpp  MenuItem.h  Movie.cpp  Movie.h  Operations.cpp  TwoDigitDatePart.h  Utility.cpp  Utility.h  entryPoint.cpp  resource.h  ~AutoRecover.DVDEngine.vcxproj
DVDEngine/Headers/: BaseDataModel.h  FileDataAdapter.h  FourDigitDatePart.h  Global.h  MovieStatus.h
